kubernetes/utilities/keel/keel-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keel
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keel
